...
                android:layout_marginLeft="8dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eventDescription"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone" />

    </LinearLayout>
...
