...
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/calParent"
                android:layout_toEndOf="@+id/calParent"
                app:layout_widthPercent="20%">

                <ImageButton
                    android:id="@+id/rideSharingButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:padding="8dp"
                    android:scaleType="fitCenter"/>
...
